[project]
name = "slinc-py"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Иларион Ерченко", email = "turolretar@gmail.com"},
]
dependencies = [
    "watchdog>=4.0.0",
    "igittigitt>=2.1.4",
    "fabric>=3.2.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
